--- a/ClavierSwiftTuto/KeyboardView.xib
+++ b/ClavierSwiftTuto/KeyboardView.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardViewController" customModule="ClavierSwiftTuto" customModuleProvider="target">
             <connections>
-                <outlet property="nextKeyboardButton" destination="90T-h1-ZWm" id="KJU-xO-7gB"/>
+                <outlet property="nextKeyboardButton" destination="90T-h1-ZWm" id="xCe-E1-CcY"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIInputView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -56,6 +56,7 @@
                 <constraint firstItem="a7M-Eu-KFC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="taz-gm-Y7k"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
+            <point key="canvasLocation" x="350" y="339"/>
         </view>
     </objects>
 </document>
